--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/ingress.yaml.j2
@@ -23,4 +23,4 @@ spec:
       - path: /kube/?(.*)
         backend:
           serviceName: kubernetes-dashboard
-          servicePort: 443
+          servicePort: https
