--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/ingress.yaml.j2
@@ -18,4 +18,4 @@ spec:
         - path: /mailhog/?(.*)
           backend:
             serviceName: mailhog
-            servicePort: 8025
+            servicePort: http
