--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/service.yaml.j2
@@ -10,7 +10,9 @@ spec:
   ports:
     - port: 1025
       name: smtp
+      targetPort: smtp
     - port: 8025
       name: http
+      targetPort: http
   selector:
     {{ mailhog.labels_def | to_nice_yaml() | indent(4) }}
