Implement manifest best practices for infra-zonemta

--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-service.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-service.yaml.j2
@@ -10,5 +10,6 @@ spec:
   ports:
   - port: 27017
     name: mongo
+    targetPort: mongo
   selector:
     {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(4) }}
