--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -20,9 +20,26 @@ spec:
         {{ zonemta_mongo.labels_def | to_nice_yaml() | indent(8) }}
         {{ zonemta_mongo.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: create-data-dir
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /data/db
+            mkdir -p /data/configdb
+            chown -R 1001:1001 /data/*
+        securityContext:
+          readOnlyRootFilesystem: true
+        volumeMounts:
+        - name: zonemta-mongo-pv-claim
+          mountPath: /data
       containers:
       - name: mongo
         image: "{{ zonemta_mongo.container.image }}"
+        imagePullPolicy: Always
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
           value: {{ zonemta_mongo.root_user }}
@@ -36,6 +53,11 @@ spec:
         ports:
         - containerPort: 27017
           name: mongo
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1001
+          runAsGroup: 1001
+          readOnlyRootFilesystem: true
         readinessProbe:
           exec:
             command:
@@ -54,14 +76,23 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
+        - mountPath: /tmp
+          name: tmp-volume
         - name: zonemta-mongo-pv-claim
           mountPath: /data/db
+          subPath: db
+        - name: zonemta-mongo-pv-claim
+          mountPath: /data/configdb
+          subPath: configdb
         - name: zonemta-mongo-init
           mountPath: /docker-entrypoint-initdb.d/
       volumes:
       - name: tz-config
         hostPath:
           path: /etc/localtime
+      - name: tmp-volume
+        emptyDir: {}
       - name: zonemta-mongo-init
         secret:
           secretName: zonemta-mongo-init
