--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-service.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-service.yaml.j2
@@ -10,5 +10,6 @@ spec:
   ports:
   - port: 6379
     name: redis
+    targetPort: redis
   selector:
     {{ zonemta_redis.labels_def | to_nice_yaml() | indent(4) }}
