--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
@@ -18,9 +18,25 @@ spec:
         {{ zonemta_redis.labels_def | to_nice_yaml() | indent(8) }}
         {{ zonemta_redis.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: create-data-dir
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /data-volume/data
+            chown -R 999:1000 /data-volume/*
+        securityContext:
+          readOnlyRootFilesystem: true
+        volumeMounts:
+        - name: zonemta-redis-pv-claim
+          mountPath: /data-volume
       containers:
       - name: redis
         image: "{{ zonemta_redis.container.image }}"
+        imagePullPolicy: Always
         command:
         - redis-server
         - "--requirepass {{ zonemta_redis.password }}"
@@ -28,6 +44,11 @@ spec:
         ports:
         - containerPort: 6379
           name: redis
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 999
+          runAsGroup: 1000
+          readOnlyRootFilesystem: true
         readinessProbe:
           exec:
             command:
@@ -46,8 +67,10 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: zonemta-redis-pv-claim
           mountPath: /data
+          subPath: data
       volumes:
       - name: tz-config
         hostPath:
