Add readinessProbe for infra-gotify

--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
@@ -26,6 +26,13 @@ spec:
         ports:
         - containerPort: 80
           name: gotify
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /health
+            port: http
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ gotify.container.requests_cpu }}"
