Implement manifest best practices for infra-gotify

--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/ingress.yaml.j2
@@ -22,4 +22,4 @@ spec:
         - path: /gotify/?(.*)
           backend:
             serviceName: gotify
-            servicePort: 80
+            servicePort: http
