--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/service.yaml.j2
@@ -9,7 +9,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80
-      targetPort: 80
+    - port: 8080
+      name: http
+      targetPort: http
   selector:
     {{ gotify.labels_def | to_nice_yaml() | indent(4) }}
