--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/networkPolicies.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/networkPolicies.yaml.j2
@@ -15,7 +15,7 @@ spec:
 
   ingress:
     - ports:
-        - port: gotify
+        - port: http
       from:
         # Allow from the ingress controller
         - namespaceSelector:
