--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/statefulSet.yaml.j2
@@ -20,12 +20,35 @@ spec:
         {{ gotify.labels_def | to_nice_yaml() | indent(8) }}
         {{ gotify.labels_desc | to_nice_yaml() | indent(8) }}
     spec:
+      initContainers:
+      - name: create-data-dir
+        image: "{{ busybox.container.image }}"
+        imagePullPolicy: Always
+        command:
+          - "sh"
+          - "-c"
+          - |
+            mkdir -p /app/data/db
+            mkdir -p /app/data/images
+            mkdir -p /app/data/plugins
+            chown -R 1000:1000 /app/data/*
+        securityContext:
+          readOnlyRootFilesystem: true
+        volumeMounts:
+        - name: gotify-pv-claim
+          mountPath: /app/data
       containers:
-      - image: "{{ gotify.container.image }}"
-        name: gotify
+      - name: gotify
+        image: "{{ gotify.container.image }}"
+        imagePullPolicy: Always        
         ports:
-        - containerPort: 80
-          name: gotify
+        - containerPort: 8080
+          name: http
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 1000
+          runAsGroup: 1000
+          readOnlyRootFilesystem: true
         readinessProbe:
           httpGet:
             scheme: HTTP
@@ -43,6 +66,7 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: gotify-pv-claim
           mountPath: /app/data
         - name: gotify-config
