--- a/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/service.yaml.j2
@@ -10,7 +10,9 @@ spec:
   ports:
   - port: 389
     name: ldap
+    targetPort: ldap
   - port: 636
     name: ldaps
+    targetPort: ldaps
   selector:
     {{ openldap.labels_def | to_nice_yaml() | indent(4) }}
