Add readinessProbe for auth-phpldapadmin

--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
@@ -27,6 +27,11 @@ spec:
         ports:
           - name: http
             containerPort: 80
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /
+            port: http
         resources:
           requests:
             cpu: "{{ phpldapadmin.container.requests_cpu }}"
