Implement manifest best practices for auth-lemonldap

--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
@@ -21,8 +21,8 @@ spec:
       - path: /lemonldap/?(.*)
         backend:
           serviceName: lemonldap
-          servicePort: 80
+          servicePort: http
       - path: /((static/|doc/|manager.psgi).*)
         backend:
           serviceName: lemonldap
-          servicePort: 80
+          servicePort: http
