--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-reloader.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-reloader.yaml.j2
@@ -17,4 +17,4 @@ spec:
       - path: /lemonldap/reloader/?(.*)
         backend:
           serviceName: lemonldap
-          servicePort: 80
+          servicePort: http
