Add readinessProbe for logging-elasticsearch

--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/ingress.yaml.j2
@@ -21,4 +21,4 @@ spec:
         - path: {{ elasticsearch.context_path }}/?(.*)
           backend:
             serviceName: elasticsearch
-            servicePort: 9200
+            servicePort: http
