--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/service.yaml.j2
@@ -10,8 +10,8 @@ spec:
   clusterIP: None
   ports:
     - port: 9200
-      name: rest
+      name: http
     - port: 9300
-      name: inter-node
+      name: transport
   selector:
     {{ elasticsearch.labels_def | to_nice_yaml() | indent(4) }}
