--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/statefulSet.yaml.j2
@@ -24,15 +24,17 @@ spec:
       - name: elasticsearch
         image: "{{ elasticsearch.container.image }}"
         ports:
-        - containerPort: 9200
-          name: rest
-          protocol: TCP
         - containerPort: 9300
-          name: inter-node
-          protocol: TCP
+          name: transport
+        - containerPort: 9200
+          name: http
         - containerPort: 9600
-          name: perftop
-          protocol: TCP
+          name: metrics
+        readinessProbe:
+          tcpSocket:
+            port: transport
+          initialDelaySeconds: 60
+          periodSeconds: 10
         resources:
           requests:
             cpu: "{{ elasticsearch.container.requests_cpu }}"
