--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
@@ -20,6 +20,7 @@ spec:
       containers:
       - name: kibana
         image: "{{ kibana.container.image }}"
+        imagePullPolicy: Always
         readinessProbe:
           httpGet:
             scheme: HTTP
@@ -27,6 +28,9 @@ spec:
             port: http
           initialDelaySeconds: 3
           periodSeconds: 5
+        securityContext:
+          runAsNonRoot: true
+          readOnlyRootFilesystem: true
         resources:
           requests:
             cpu: "{{ kibana.container.requests_cpu }}"
@@ -43,12 +47,15 @@ spec:
         volumeMounts:
         - name: tz-config
           mountPath: /etc/localtime
+          readOnly: true
         - name: kibana-config
           mountPath: /usr/share/kibana/config/kibana.yml
           subPath: kibana.yml
         - name: cluster-ca-volume
           mountPath: /etc/ssl/cluster/ca.crt
           subPath: ca.crt
+        - name: tmp-volume
+          mountPath: /usr/share/kibana/optimize/
       volumes:
       - name: tz-config
         hostPath:
@@ -59,5 +66,7 @@ spec:
       - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
+      - name: tmp-volume
+        emptyDir: {}
       nodeSelector:
         capability/general-purpose: 'yes'
