--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -343,6 +343,7 @@ watchers:
     includes:
       - v[1-9]\.[0-9]+\.[0-9]+.*debian.*
     excludes:
+      - .*(armhf|arm64).*
       - v1\.[0-4]\..*
   - type: docker_registry
     repo: {{ kibana.base_image.repo | default('registry-1.docker.io') }}
