Add readinessProbe for logging-fluentd

--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/deployment.yaml.j2
@@ -38,6 +38,11 @@ spec:
             value: "{{ fluentd_elasticsearch_password }}"
           - name: SSL_CERT_FILE
             value: "/etc/ssl/cluster/ca.crt"
+        readinessProbe:
+          tcpSocket:
+            port: fluentd
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ fluentd.container.requests_cpu }}"
