Add readinessProbe for logging-fluentbit

--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -47,6 +47,13 @@ spec:
           readOnly: true
         - name: fluent-bit-config
           mountPath: /fluent-bit/etc/
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /api/v1/metrics/prometheus
+            port: metrics
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ fluentbit.container.requests_cpu }}"
