--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
@@ -28,6 +28,16 @@ spec:
         ports:
         - containerPort: 8443
           name: https-main
+        readinessProbe:
+          # We can't use httpGet -> we'll get a 401 and the probe will think it's down
+          # We can't use a tcpSocket -> it floods the logs with "TLS handshake error from ...: EOF"
+          exec:
+            command:
+            - /bin/sh
+            - -c 
+            - "test \"$(wget --server-response --spider --quiet --no-check-certificate https://127.0.0.1:8443/ 2>&1 | awk 'NR==1 {print $2}')\" == \"401\""
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           limits:
             cpu: 20m
@@ -45,6 +55,16 @@ spec:
         ports:
         - containerPort: 9443
           name: https-self
+        readinessProbe:
+          # We can't use httpGet -> we'll get a 401 and the probe will think it's down
+          # We can't use a tcpSocket -> it floods the logs with "TLS handshake error from ...: EOF"
+          exec:
+            command:
+            - /bin/sh
+            - -c 
+            - "test \"$(wget --server-response --spider --quiet --no-check-certificate https://127.0.0.1:9443/ 2>&1 | awk 'NR==1 {print $2}')\" == \"401\""
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           limits:
             cpu: 20m
@@ -59,6 +79,8 @@ spec:
         - --telemetry-port=8082
         image: "{{ kube_state_metrics.container.image }}"
         name: kube-state-metrics
+        #readinessProbe:
+        # As we bind to 127.0.0.1, we can't add probes to this container
         resources:
           requests:
             cpu: "{{ kube_state_metrics.container.requests_cpu }}"
