--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
@@ -24,6 +24,7 @@ spec:
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
         - --upstream=http://127.0.0.1:8081/
         image: quay.io/coreos/kube-rbac-proxy:v0.4.1
+        imagePullPolicy: Always
         name: kube-rbac-proxy-main
         ports:
         - containerPort: 8443
@@ -38,6 +39,8 @@ spec:
             - "test \"$(wget --server-response --spider --quiet --no-check-certificate https://127.0.0.1:8443/ 2>&1 | awk 'NR==1 {print $2}')\" == \"401\""
           initialDelaySeconds: 3
           periodSeconds: 5
+        securityContext:
+          readOnlyRootFilesystem: true
         resources:
           limits:
             cpu: 20m
@@ -51,6 +54,7 @@ spec:
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_RSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
         - --upstream=http://127.0.0.1:8082/
         image: quay.io/coreos/kube-rbac-proxy:v0.4.1
+        imagePullPolicy: Always
         name: kube-rbac-proxy-self
         ports:
         - containerPort: 9443
@@ -65,6 +69,8 @@ spec:
             - "test \"$(wget --server-response --spider --quiet --no-check-certificate https://127.0.0.1:9443/ 2>&1 | awk 'NR==1 {print $2}')\" == \"401\""
           initialDelaySeconds: 3
           periodSeconds: 5
+        securityContext:
+          readOnlyRootFilesystem: true
         resources:
           limits:
             cpu: 20m
@@ -78,7 +84,10 @@ spec:
         - --telemetry-host=127.0.0.1
         - --telemetry-port=8082
         image: "{{ kube_state_metrics.container.image }}"
+        imagePullPolicy: Always
         name: kube-state-metrics
+        securityContext:
+          readOnlyRootFilesystem: true
         #readinessProbe:
         # As we bind to 127.0.0.1, we can't add probes to this container
         resources:
