Add readinessProbe for monitoring-nginx-exporter

--- a/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -30,6 +30,13 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /metrics
+            port: metrics
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ nginx_exporter.container.requests_cpu }}"
