Add readinessProbe for monitoring-nginx-log-exporter

--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -27,6 +27,13 @@ spec:
         ports:
         - containerPort: 4040
           name: metrics
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /metrics
+            port: metrics
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ nginx_log_exporter.container.requests_cpu }}"
