Add readinessProbe for monitoring-release-watcher

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
@@ -26,6 +26,13 @@ spec:
         ports:
         - containerPort: 8080
           name: metrics
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /
+            port: metrics
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           requests:
             cpu: "{{ release_watcher.container.requests_cpu }}"
