Add readinessProbe for monitoring-prometheus-operator

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
@@ -28,6 +28,13 @@ spec:
         ports:
         - containerPort: 8080
           name: http
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /healthz
+            port: http
+          initialDelaySeconds: 3
+          periodSeconds: 5
         resources:
           limits:
             cpu: {{ prometheus_operator.container.limits_cpu }}
